test/errors/assert/foreach.yasl

for x in [1, 2, 3] {
    assert false
    echo x
}
